--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   firebase_auth: ^0.16.0
   consumer: ^2.0.0
   google_sign_in: ^4.4.4
+  flutter_bloc: ^4.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
